umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_bf.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["B#n#v" "F#n3#v"] :bonds [[0 1 "1"]]} :success true}
  :counts {:output {:atoms ["B#n#v" "F#n3#v"] :bonds [[0 1 "1"]]} :success true}}
