umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_bf3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["B#v3" "F#n3#v" "F#n3#v" "F#n3#v"]
      :bonds [[0 1 :single] [0 2 :single] [0 3 :single]]
      :charge 0
      :spin "#u0#s1"}
    :success true}
  :counts {
    :output {
      :atoms ["B#v3" "F#n3#v" "F#n3#v" "F#n3#v"]
      :bonds [[0 1 :single] [0 2 :single] [0 3 :single]]
      :charge 0
      :spin "#u0#s1"}
    :success true}}
