umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_bn.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "B#c-#n#v2" "1" "N#c+#n#v2"} :bonds [[0 1 "2#u2"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "B#c-#n#v2" "1" "N#c+#n#v2"} :bonds [[0 1 "2#u2"]] :charge 0 :spin "#u0 #s1"}}}
