umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_bo.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["B#u#v2" "O#n2#v2"] :bonds [[0 1 :double]]} :success true}
  :counts {:output {:atoms ["B#u#v2" "O#n2#v2"] :bonds [[0 1 :double]]} :success true}}
