umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_br2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Br#n3#v" "Br#n3#v"] :bonds [[0 1 :single]]} :success true}
  :counts {:output {:atoms ["Br#n3#v" "Br#n3#v"] :bonds [[0 1 :single]]} :success true}}
