umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_c2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["C#n#v2" "C#n#v2"] :bonds [[0 1 "2#s3"]]} :success true}
  :counts {:output {:atoms ["C#n#v2" "C#n#v2"] :bonds [[0 1 "2#s3"]]} :success true}}
