umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_ch3.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#u#v3" "1" "H#v" "2" "H#v" "3" "H#v"} :bonds [["0" "1" "1"] ["0" "2" "1"] ["0" "3" "1"]] :charge 0 :spin "#u1 #s2"}} :counts {:success true :output {:atoms {"0" "C#u#v3" "1" "H#v" "2" "H#v" "3" "H#v"} :bonds [["0" "1" "1"] ["0" "2" "1"] ["0" "3" "1"]] :charge 0 :spin "#u1 #s2"}}}
